--- a/Starter_Code.ipynb
+++ b/Starter_Code.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -709,14 +709,11 @@
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
-    "# First layer\n",
-    "nn.add(tf.keras.layers.Dense(units=128, activation=\"relu\", input_dim=number_input_features))\n",
+    "# First hidden layer\n",
+    "nn.add(tf.keras.layers.Dense(units=80, activation=\"relu\", input_dim=number_input_features))\n",
     "\n",
-    "# Second layer\n",
-    "nn.add(tf.keras.layers.Dense(units=64, activation=\"relu\"))\n",
-    "\n",
-    "# third layer \n",
-    "nn.add(tf.keras.layers.Dense(units=32, activation=\"relu\"))\n",
+    "# Second hidden layer\n",
+    "nn.add(tf.keras.layers.Dense(units=30, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
     "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
@@ -741,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1154,7 @@
     "    X_train_scaled,\n",
     "    y_train,\n",
     "    validation_split=0.2,  # 20% of training data used for validation\n",
-    "    epochs=200 # You can adjust this later if needed\n",
+    "    epochs=150 # You can adjust this later if needed\n",
     ")"
    ]
   },
